--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -254,7 +254,7 @@
         </LinearLayout>
 
 
-<!--                <com.kusu.loadingbutton.LoadingButton-->
+<!--                <Button-->
 <!--                    android:id="@+id/btnLogin"-->
 <!--                    android:layout_width="match_parent"-->
 <!--                    android:layout_height="wrap_content"-->
