--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_alignParentBottom="true"
         app:itemTextColor="@color/color_navigation"
         app:itemIconTint="@color/color_navigation"
+        app:labelVisibilityMode="labeled"
         app:menu="@menu/menu_navigation">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
