--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,15 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue_1"
+    android:orientation="vertical"
     tools:context=".fragment.GiaoDienChinh.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Tab1" />
+        android:layout_height="70dp"
+        android:gravity="center"
+        android:background="@color/orange"
+        android:orientation="horizontal">
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/imageView"
+            android:background="@android:color/transparent"
+            android:layout_width="0dp"
+            android:adjustViewBounds="true"
+            android:layout_height="40dp"
+            android:layout_weight="0.15"
+            app:srcCompat="@drawable/ic_baseline_search_24" />
+
+        <EditText
+            android:layout_weight="0.8"
+            android:id="@+id/txtTimkiem"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text=""
+            android:hint="Tìm kiếm công việc, chát"
+            tools:layout_editor_absoluteX="100dp"
+            tools:layout_editor_absoluteY="54dp" />
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listChat"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
