--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,7 @@
     <color name="gray_text_title">#ff6d6d6d</color>
     <color name="colorLink">#15a4fa</color>
     <color name="colorText">#ff303341</color>
+    <color name="orange">#ffa500</color>
     <color name="color_4D4D4D">#ff4d4d4d</color>
     <color name="main_bg">#FFA233</color>
     <color name="main_bg_header">#FA9E30</color>
