--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -202,6 +202,15 @@
                 android:textSize="@dimen/font_normal"
                 android:textStyle="normal"
                 android:visibility="gone" />
+            <Button
+                android:id="@+id/btnDK"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp5"
+                android:layout_gravity="end"
+                android:text="Đăng kí"
+                >
+            </Button>
 
             <TextView
                 android:id="@+id/btn_forget"
