--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -129,6 +129,7 @@
                         android:background="@color/transparent"
                         android:elevation="@dimen/dp5"
                         android:hint="@string/enter_employee_code"
+                        android:text="admin"
                         android:inputType="text"
                         android:maxLength="10"
                         android:maxLines="1"
@@ -176,6 +177,7 @@
                             android:layout_marginTop="@dimen/margin_8dp"
                             android:background="@color/transparent"
                             android:hint="@string/enter_pass"
+                            android:text="12345"
                             android:inputType="textPassword"
                             android:maxLines="1"
                             android:textColor="@color/black"
