--- a/app/src/main/res/layout/mstxt.xml
+++ b/app/src/main/res/layout/mstxt.xml
@@ -1,19 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:padding="10dp"
+    android:gravity="left"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txtMs"
-        android:layout_width="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
-        android:textSize="20dp"
-        android:layout_height="wrap_content"
-        android:background="@color/orange"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="360dp"
+            >
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/user_rep_mess"
+                android:src="@drawable/ic_account"
+                />
+        </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/txtMs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:textSize="16sp"
+            android:layout_marginBottom="3dp"
+            android:textColor="@color/black"
+            android:padding="4dp"
+            android:background="@drawable/button"
+            android:layout_marginLeft="6dp"
+
+            />
+    </LinearLayout>
+
+</LinearLayout>
