--- a/app/src/main/res/layout/txtmsright.xml
+++ b/app/src/main/res/layout/txtmsright.xml
@@ -1,19 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="left"
+    android:layout_marginTop="10dp"
+    >
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="360dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/user_rep_mess"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_chat" />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/txtMsRight"
         android:layout_width="wrap_content"
-        android:layout_marginRight="30dp"
-        android:textSize="20dp"
-        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:background="@color/orange"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/button"
+        android:gravity="right"
+        android:padding="4dp"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+
+        app:layout_constraintEnd_toStartOf="@+id/cardView"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
