--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -190,6 +190,8 @@
                     android:id="@+id/btnLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/button"
+                    app:backgroundTint="@null"
                     android:text="đăng nhập">
 
                 </Button>
@@ -209,6 +211,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp5"
+                android:layout_marginTop="@dimen/dp10"
+                android:background="@drawable/button"
+                app:backgroundTint="@null"
                 android:layout_gravity="end"
                 android:text="Đăng kí"
                 >
