--- a/app/src/main/res/layout/activity_otpcode.xml
+++ b/app/src/main/res/layout/activity_otpcode.xml
@@ -55,7 +55,8 @@
         android:layout_marginLeft="@dimen/dp50"
         android:layout_marginRight="@dimen/dp50"
         android:text="Xác nhận"
-        android:background="@drawable/abc"
+        android:background="@drawable/button"
+        app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
