--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,12 @@
 
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottom_navigation"
-        >
-    </androidx.viewpager.widget.ViewPager>
+        android:layout_above="@id/bottom_navigation"></androidx.viewpager.widget.ViewPager>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -20,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:itemIconTint="@color/color_navigation"
+        android:background="@color/white"
         app:itemTextColor="@color/color_navigation"
         app:labelVisibilityMode="labeled"
         app:menu="@menu/menu_navigation">
