--- a/app/src/main/res/layout/fragment_mycar.xml
+++ b/app/src/main/res/layout/fragment_mycar.xml
@@ -18,17 +18,18 @@
     </TextView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listmycar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/add"
         android:layout_below="@+id/txtTTXCN" />
+
     <ImageButton
         android:id="@+id/add"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/backgrounddk"
-        android:src="@drawable/add"
-        />
+        android:src="@drawable/add" />
 </RelativeLayout>
