--- a/app/src/main/res/layout/itemxe.xml
+++ b/app/src/main/res/layout/itemxe.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/txtTenxe"
         android:layout_width="wrap_content"
@@ -13,9 +13,12 @@
         android:textStyle="bold"
         >
     </TextView>
+
     <ImageView
+        android:id="@+id/imgxecanhan"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp200"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:layout_below="@+id/txtTenxe"
         android:src="@drawable/wave"></ImageView>
 
