--- a/app/src/main/res/layout/activity_detail_car.xml
+++ b/app/src/main/res/layout/activity_detail_car.xml
@@ -4,37 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bgsimple"
     tools:context=".DetailCar">
 
-    <ImageView
-        android:layout_marginTop="@dimen/dp8"
-        android:id="@+id/imageView2"
-        android:layout_width="@dimen/dp20"
-        android:layout_height="@dimen/dp20"
-        android:layout_marginLeft="@dimen/dp10"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
-
-    <TextView
-        android:id="@+id/txtDTTenXe"
-        android:layout_marginTop="@dimen/dp8"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/lyTop"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:padding="@dimen/dp8"
+        android:background="@color/orange"
+        android:orientation="horizontal"
         android:layout_alignParentTop="true"
-        android:textSize="@dimen/dp20"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_alignParentRight="true"
-        android:text="Future 125 FI"
-        android:textAlignment="center" />
+        >
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="@dimen/dp20"
+            android:layout_height="@dimen/dp20"
+            android:layout_marginLeft="@dimen/dp10"
+            android:layout_marginTop="4dp"
+            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
+
+        <TextView
+            android:id="@+id/txtDTTenXe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp20"
+            android:background="@color/orange"
+            android:text="Đặt Lịch Bảo Trì"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/dp20"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/dp20"
         android:layout_above="@id/button"
-        android:layout_below="@+id/txtDTTenXe">
+        android:layout_below="@+id/lyTop">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -76,8 +86,8 @@
            android:textStyle="bold"
             android:textColor="@color/black"
             >
-
         </TextView>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listBaoTri"
             android:layout_width="match_parent"
@@ -85,6 +95,7 @@
             android:layout_below="@+id/abcd"></androidx.recyclerview.widget.RecyclerView>
     </RelativeLayout>
     </ScrollView>
+
     <Button
         android:id="@+id/button"
         android:layout_width="180dp"
@@ -100,7 +111,7 @@
         app:backgroundTint="@null" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnDatLichHen"
         android:layout_width="@dimen/size_180"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
