--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -2,8 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:id="@+id/menu_tab1" android:title="Trang Chủ" android:icon="@drawable/ic_home" ></item>
     <item android:id="@+id/menu_tab2" android:title="Xe của tôi" android:icon="@drawable/ic_key"></item>
-    <item android:id="@+id/menu_tab3" android:title="Sản phẩm" android:icon="@drawable/ic_motorcycle"></item>
-    <item android:id="@+id/menu_tab4" android:title="Đại lý" android:icon="@drawable/ic_location"></item>
+    <item android:id="@+id/menu_tab4" android:title="Đại lý sửa chữa" android:icon="@drawable/ic_location"></item>
     <item android:id="@+id/menu_tab5" android:title="Tin nhắn" android:icon="@drawable/ic_chat"></item>
 
 </menu>
