--- a/app/src/main/res/layout/activity_chi_tiet_phieu_luu.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_phieu_luu.xml
@@ -113,6 +113,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_pt"
         android:layout_width="409dp"
         android:layout_height="332dp"
         app:layout_constraintEnd_toEndOf="parent"
